--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ aiosqlite = "^0.20.0"
 black = "^24.10.0"
 passlib = "^1.7.4"
 python-jose = "^3.3.0"
+flake8-builtins = "^2.5.0"
+isort = "^5.13.2"
 
 
 [build-system]
@@ -22,3 +24,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
+
+[tool.isort]
+profile = "black"
